--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1127.0",
     "axios": "^0.26.1",
     "dotenv": "^10.0.0",
     "uuid": "^8.3.2",
