Move to env, remove testings

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-NODE_ENV=development
-PORT_MAP=3000
+AWS_S3_ACCESS_KEY_ID=AKIAU---------
+AWS_S3_SECRET_ACCESS_KEY=TS5--------------------
+
+AWS_S3_WIND_BUCKET=wind-tiles
+
+ECMWF_WIND_MAX_ZOOM=5
+ECMWF_WIND_MIN_ZOOM=0
