--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "start": "node build/main.js",
-    "dev": "tsnd --respawn --poll src/main.ts",
+    "start": "node build/processECMWFWind.js",
+    "dev": "ts-node src/processECMWFWind.ts",
     "build": "rm -rf ./build && tsc --project ./",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "test": "jest --coverage --detectOpenHandles --forceExit"
+    "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1127.0",
+    "axios": "^0.26.1",
     "dotenv": "^10.0.0",
     "uuid": "^8.3.2",
     "winston": "^3.6.0"
