Add Terraform configuration (working), fix nan hours, wrong hour stored, duplicate particle image to all hours, add optional tiling to env

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ data/
 build/
 operating_folder/
 testing/
+
+**/.terraform
+**/terraform.tfstate
+**/terraform.tfstate.backup
+**/.terraform.lock.hcl
